# EARIN-PW

./: README.md
Project/: main.py  pyproject.toml
lab1/: lab1_cg103_g13_v3_shah_tagui.md  lab1_cg103_g13_v3_shah_tagui.py
lab2/: lab2_cg103_g13_v3_shah_tagui.py  test-loss.txt  test-win.txt  test_case_loss.html  test_case_win.html
lab3/: lab3_cg103_g13_v3_shah_tagui.py
lab4/: lab4_cg103_g13_v3_shah_tagui.py
lab5/: lab5_cg103_g13_v3_shah_tagui.py
lab6/: lab6_cg103_g13_v3_shah_tagui.py
lab7/: instruction.md  lab7_cg103_g13_v3_shah_tagui.pl
