[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "numpy>=2.2.6",
    "plotly-express>=0.4.1",
    "polars>=1.30.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.6.1",
]
